--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,4 +10,6 @@
  // * file per style scope.
 
  @import "bootstrap-sprockets";
+ @import "bootswatch/cosmo/variables";
  @import "bootstrap";
+ @import "bootswatch/cosmo/bootswatch";
