--- a/app/views/registered_applications/edit.html.erb
+++ b/app/views/registered_applications/edit.html.erb
@@ -1,11 +1,11 @@
 <h1 Update Your Application</h1>
   <div class="row">
     <div class="col-md-4">
-      <p>Important:</p>
-      <p>Will fill in later.</p>
+      <p>Please submit your changes.</p>
     </div>
     <div class="col-md-8">
       <%= form_for @registered_application do |f| %>
+        <%= f.hidden_field :user_id, value: current_user.id %>
         <div class="form-group">
           <%= f.label :name %>
           <%= f.text_field :name, class: 'form-control', placeholder: "Enter official name of app" %>
