--- a/app/views/registered_applications/new.html.erb
+++ b/app/views/registered_applications/new.html.erb
@@ -3,10 +3,11 @@
 <div class="row">
   <div class="col-md-4">
     <p>Important:</p>
-    <p>Will fill this in later.</p>
+    <p>All fields are required.</p>
   </div>
   <div class="col-md-8">
     <%= form_for @registered_application do |f| %>
+      <%= f.hidden_field :user_id, value: current_user.id %>
       <div class="form-group">
         <%= f.label :name %>
         <%= f.text_field :name, class: 'form-control', placeholder: "Enter official name of app" %>
