--- a/app/views/registered_applications/show.html.erb
+++ b/app/views/registered_applications/show.html.erb
@@ -5,7 +5,8 @@
     <p><%= @registered_application.url %></p>
   </div>
   <div class="col-md-4">
-    <%= link_to "Edit App", edit_registered_application_path(@registered_application), class: 'btn btn-success' %>
-    <%= link_to "Delete App", @registered_application, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this registered application?'} %>
+    <%= link_to 'Edit App', edit_registered_application_path(@registered_application), class: 'btn btn-success' %>
+    <%= link_to 'Delete App', @registered_application, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this registered application?'} %>
+    <%= link_to 'Back to Applications', registered_applications_path %>
   </div>
 </div>
