--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,34 +8,22 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <ul class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-          <% if current_user %>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><%= link_to "Your Applications", registered_applications_path %></li>
-            <li class="active"><%= link_to "About", about_path %><span class="sr-only">(current)</span></li>
-            <li class="active"><%= link_to "Register New Application", new_registered_application_path %><span class="sr-only">(current)</span></li>
-          </ul>
-        </div>
-          <% else %>
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li class="active"><%= link_to "Blocmetrics", root_path %></li>
-              <li class="active"><%= link_to "About", about_path %><span class="sr-only">(current)</span></li>
-            </ul>
-          <% end %>
-        </div>
-      </ul>
-    </nav>
+<div class="container" role="navigation">
+  <% if current_user %>
+  <ul class="nav nav-tabs">
+    <li role="presentation"><%= link_to "Your Applications", registered_applications_path %></li>
+    <li role="presentation"><%= link_to "About", about_path %></li>
+    <li role="presentation"><%= link_to "Register New Application", new_registered_application_path %></li>
+  </ul>
+</div>
+  <% else %>
+  <div class="container" role="navigation">
+    <ul class="nav nav-tabs">
+      <li role="presentation"><%= link_to "Blocmetrics", root_path %></li>
+      <li role="presentation"><%= link_to "About", about_path %></li>
+    </ul>
+  <% end %>
+  </div>
   <% if flash[:notice] %>
   <div class="alert alert-success">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -52,18 +40,20 @@
     <%= flash[:alert] %>
   </div>
   <% end %>
-  <% if user_signed_in? %>
-    Signed in as: <strong><%= current_user.email %></strong> |
-    <%= link_to 'Edit Profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-    <% else %>
-    <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
-    <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
-    <% end %>
+  <div class="container navbar-fixed-top">
+    <div class="navbar-link navbar-right">
+      <% if user_signed_in? %>
+      Signed in as: <strong><%= current_user.email %></strong> |
+      <%= link_to 'Edit Profile', edit_user_registration_path %> | <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+      <% else %>
+      <%= link_to "Sign In", new_user_session_path%> | <%= link_to "Sign Up", new_user_registration_path %>
+      <% end %>
+  </div>
+</div>
     <%= yield :top_content %>
     <div class="container">
       <h1><%= yield :header %></h1>
       <%= yield %>
     </div>
-  </div>
-</body>
+  </body>
 </html>
